--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=spring-cloud-config-server
-sarver.port=8888
-
+server.port=8888
+#spring.cloud.config.server.git.uri=file:///USER/git/SpringCloudSecurity/config-properties
