--- a/ConfigServer/src/main/resources/application.properties
+++ b/ConfigServer/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
-spring.cloud.config.server.git.uri=file:///Users/USER/git/SpringCloudSecurity/config-properties
+management.endpoints.web.exposure.include=*
+spring.cloud.config.server.git.uri=https://github.com/tarunsoni10aug/config-serverproperties
